# reee

./: .clang-format  .clang-tidy  .gitignore  CATCH2_COMPATIBILITY.md  CMakeLists.txt  CMakePresets.json  FINAL_STRUCTURE.md  NAMING_CONVENTIONS.md  QUICKSTART.md  README.md  cmake.options  vcpkg.json
.github/workflows/: format.yml  rename-project.yml
cmake/: CPM.cmake  Ccache.cmake  ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake  Coverage.cmake  Cppcheck.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake
include/PROJECT_NAME_LOWER/: example.h
include/reee/: example.h
scripts/: rename_project.sh
src/: CMakeLists.txt  example.cpp  main.cpp
tests/: .clang-tidy  CMakeLists.txt  test_example.cpp
